# igneous

./: .gitignore  Cargo.toml  README.md  makefile  makelog.txt  myMakefile  readme.md
src/: igneous.capnp  lib.rs  main  main.rs
src/azure/: lib.rs  test.rs
tests/: azure_test.rs  test.rs
