[package]
name = "igneous"
version = "0.0.0"
authors = [ "cole.mickens@gmail.com" ]

[[lib]]
name = "azure"
path = "src/azure/lib.rs"

[[bin]]
name = "igneous"
path = "src/bin/main.rs"

[[bin]]
name = "dbpg"
path = "src/dbpg/main.rs"

#[dependencies.capnp]
#git = "https://github.com/dwrensha/capnproto-rust.git"

[dependencies.http]
git = "https://github.com/chris-morgan/rust-http.git"

[dependencies.rust-postgres]
git = "https://github.com/sfackler/rust-postgres.git"

[dependencies.url]
git = "https://github.com/servo/rust-url"