[package]
name = "igneous"
version = "0.0.0"
authors = [ "cole.mickens@gmail.com" ]

[[lib]]
name = "azure"
path = "src/lib.rs"

[dependencies.http]
git = "https://github.com/chris-morgan/rust-http.git"

[dependencies.rust-postgres]
git = "https://github.com/sfackler/rust-postgres.git"

[dependencies.url]
git = "https://github.com/servo/rust-url"